--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"><link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link rel="stylesheet" href="css/style.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
   <script src="js/scripts.js"></script>
@@ -64,154 +65,226 @@
       <h1 class="section-title">About</h1>
       <div class="about-content">
         <img src="images/4.jpg" alt="" class="about-pic">
-        
+
         <div class="about-text">
           <h2>Hi! I'm Full Stack Developer</h2>
           <h3>
             <span>Front-end</span>
             <span>Back-end</span>
           </h3>
-          <p>Знание:</p>
-          <div class="carousel">
-            <a class="carousel-item" href="#one!"><img src="https://lorempixel.com/250/250/nature/1"></a>
-            <a class="carousel-item" href="#two!"><img src="https://lorempixel.com/250/250/nature/2"></a>
-            <a class="carousel-item" href="#three!"><img src="https://lorempixel.com/250/250/nature/3"></a>
-            <a class="carousel-item" href="#four!"><img src="https://lorempixel.com/250/250/nature/4"></a>
-            <a class="carousel-item" href="#five!"><img src="https://lorempixel.com/250/250/nature/5"></a>
-          </div>
-          <ul>
+          <p>Knowledge:</p>
+          <ul class="collapsible popout">
             <li>
-              HTML, CSS(Sass, Scss), SVG
-            </li>
-            <li>
-              Javascript (сделал более 10 сайтов)
-            </li>
-            <li>
-              React
-              <span>Сделал адаптивное web приложение интернет магазина с:</span>
-              <ul>
-                <li>
-                  выбором языка
-                </li>
-                <li>
-                  админ панелью
-                </li>
-                <li>
-                  определением места положения
-                </li>
-              </ul>
-              <span>для выполнения этой задачи изучил:</span>
-              <ul>
-                <li>Node.js</li>
-                <li>Express</li>
-                <li>PostgreSQL</li>
-                <li>React Bootstrap</li>
-                <li>запуск приложения на сервере</li>
-              </ul>
-              <span>для управления фронтенд-состоянием приложения использовал:</span>
-              <ul>
-                <li>MobX</li>
-              </ul>
-              <span>для авторизации пользователя использовал:</span>
-              <ul>
-                <li>JSON Web Token</li>
-              </ul>
-              <span>для валидации полей авторизации и регистрации пользователя использовал npm пакет:</span>
-              <ul>
-                <li>Express-validator</li>
-              </ul>
-              <span>для добовления товара в список сравнения использовал:</span>
-              <ul>
-                <li>Cookie</li>
-              </ul>
-              <span>для сжатия статических файлов использовал npm пакет:</span>
-              <ul>
-                <li>Сompression</li>
-              </ul>
-              <span>для отправки email использовал npm пакет:</span>
-              <ul>
-                <li>Nodemailer</li>
-              </ul>
-              <div>
-                Вот ссылка на web приложение: &nbsp;&nbsp;<a
-                  href="https://euro-app.site">https://euro-app.site</a><br />
-                Вот ссылка на GitHub: &nbsp;&nbsp;<a
-                  href="https://github.com/Victor-Irzunov/E-comerce-React-Node.js-PostgreSQL-.git">https://github.com/Victor-Irzunov/E-comerce-React-Node.js-PostgreSQL-.git</a><br />
-                <i>Логин администратора: q@tut.by<br />
-                  Пароль администратора: 11111</i><br />
-                Срок выполнения: 3 месяца
-              </div>
-            </li>
-            <li>
-              Node.js
-              <span>Cделал web приложение, для выполнения этой задачи изучил:</span>
-              <ul>
-                <li>
-                  Handlebars
-                </li>
-                <li>
-                  MongoDB
-                </li>
-              </ul>
-              <span>для авторизации пользователя использовал npm пакет:</span>
-              <ul>
-                <li>Express-session</li>
-              </ul>
-              <span>для избежания определённых атак и немного защитить приложение (путём добавления заголовков)
-                использовал npm пакет:</span>
-              <ul>
-                <li>Helmet</li>
-              </ul>
-              <span>для валидации полей авторизации и регистрации пользователя использовал npm пакет:</span>
-              <ul>
-                <li>Express-validator</li>
-              </ul>
-              <span>для сжатия статических файлов использовал npm пакет:</span>
-              <ul>
-                <li>Сompression</li>
-              </ul>
-              <span>для отправки email использовал npm пакет:</span>
-              <ul>
-                <li>Nodemailer</li>
-              </ul>
-              <div>
-                Вот ссылка на web приложение: &nbsp;&nbsp;<a
-                  href="https://quiet-gorge-08860.herokuapp.com">https://quiet-gorge-08860.herokuapp.com</a><br />
-                Вот ссылка на GitHub: &nbsp;&nbsp;<a
-                  href="https://github.com/Victor-Irzunov/e-commerce-application.git">https://github.com/Victor-Irzunov/e-commerce-application.git</a><br />
-                <i>Логин администратора: a@tut.by<br />
-                  Пароль администратора: 111</i><br />
-                Срок выполнения: 1 месяц
-              </div>
-            </li>
-            <li>
-              REST API
-              <span>Создал простое, но полноценное клиент-серверное web приложение (todo application), для выполнения этой задачи изучил:</span>
-              <ul>
-                <li>
-                  MySQL
-                </li>
-                <div>
-                  Вот ссылка на web приложение: &nbsp;&nbsp;<a
-                    href="https://mighty-falls-71399.herokuapp.com/">https://mighty-falls-71399.herokuapp.com/</a><br />
-                  Вот ссылка на GitHub: &nbsp;&nbsp;<a
-                    href="https://github.com/Victor-Irzunov/REST-API.git">https://github.com/Victor-Irzunov/REST-API.git</a><br />
-                  Срок выполнения: 1 неделя
+              <div class="collapsible-header" onclick="toggleOpen(1)">
+                <div class="collapsible-header-img">
+                  <img src="https://img.icons8.com/color/48/000000/html-5.png" class="img__html" />
+                  <img src="https://img.icons8.com/color/48/000000/css3.png" class="img__html" />
+                  <span class="collapsible__title">HTML, CSS(Sass, Scss), SVG</span>
                 </div>
-              </ul>
-            </li>
-            <li>
-              GraphQL
-                <div>
-                  Вот ссылка на GitHub: &nbsp;&nbsp;<a
-                    href="https://github.com/Victor-Irzunov/GraphQL.git">https://github.com/Victor-Irzunov/GraphQL.git</a><br />
-                  Срок выполнения: 3 дня
+                <div class="arrow-4 i1">
+                  <span class="arrow-4-left"></span>
+                  <span class="arrow-4-right"></span>
                 </div>
-              
+              </div>
+              <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+            </li>
+
+
+            <li>
+              <div class="collapsible-header"  onclick="toggleOpen(2)">
+                <div class="collapsible-header-img">
+                  <img src="https://img.icons8.com/ios/50/000000/javascript--v1.png" class="img__js" />
+                  <span class="collapsible__title">Javascript</span>
+                </div>
+                <div class="arrow-4 i2">
+                  <span class="arrow-4-left"></span>
+                  <span class="arrow-4-right"></span>
+                </div>
+              </div>
+
+              <div class="collapsible-body"><span>сделал более 10 сайтов</span></div>
+            </li>
+
+
+            <li>
+              <div class="collapsible-header" onclick="toggleOpen(3)">
+                <div class="collapsible-header-img">
+                  <img src="https://img.icons8.com/plasticine/100/000000/react.png" class="img__react" />
+                  <span class="collapsible__title">React</span>
+                </div>
+                <div class="arrow-4 i3">
+                  <span class="arrow-4-left"></span>
+                  <span class="arrow-4-right"></span>
+                </div>
+              </div>
+              <div class="collapsible-body"><span><span>Сделал адаптивное web приложение интернет магазина с:</span>
+                  <ul>
+                    <li>
+                      выбором языка
+                    </li>
+                    <li>
+                      админ панелью
+                    </li>
+                    <li>
+                      определением места положения
+                    </li>
+                  </ul>
+                  <span>для выполнения этой задачи изучил:</span>
+                  <ul>
+                    <li>Node.js</li>
+                    <li>Express</li>
+                    <li>PostgreSQL</li>
+                    <li>React Bootstrap</li>
+                    <li>запуск приложения на сервере</li>
+                  </ul>
+                  <span>для управления фронтенд-состоянием приложения использовал:</span>
+                  <ul>
+                    <li>MobX</li>
+                  </ul>
+                  <span>для авторизации пользователя использовал:</span>
+                  <ul>
+                    <li>JSON Web Token</li>
+                  </ul>
+                  <span>для валидации полей авторизации и регистрации пользователя использовал npm пакет:</span>
+                  <ul>
+                    <li>Express-validator</li>
+                  </ul>
+                  <span>для добовления товара в список сравнения использовал:</span>
+                  <ul>
+                    <li>Cookie</li>
+                  </ul>
+                  <span>для сжатия статических файлов использовал npm пакет:</span>
+                  <ul>
+                    <li>Сompression</li>
+                  </ul>
+                  <span>для отправки email использовал npm пакет:</span>
+                  <ul>
+                    <li>Nodemailer</li>
+                  </ul>
+                  <div>
+                    Вот ссылка на web приложение: &nbsp;&nbsp;<a
+                      href="https://euro-app.site">https://euro-app.site</a><br />
+                    Вот ссылка на GitHub: &nbsp;&nbsp;<a
+                      href="https://github.com/Victor-Irzunov/E-comerce-React-Node.js-PostgreSQL-.git">https://github.com/Victor-Irzunov/E-comerce-React-Node.js-PostgreSQL-.git</a><br />
+                    <i>Логин администратора: q@tut.by<br />
+                      Пароль администратора: 11111</i><br />
+                    Срок выполнения: 3 месяца
+                  </div>
+                </span></div>
+            </li>
+
+
+            <li>
+              <div class="collapsible-header" onclick="toggleOpen(4)">
+                <div class="collapsible-header-img">
+                  <img src="https://img.icons8.com/color/48/000000/nodejs.png" class="img__node" />
+                  <span class="collapsible__title4">Node.js</span>
+                </div>
+                <div class="arrow-4 i4">
+                  <span class="arrow-4-left"></span>
+                  <span class="arrow-4-right"></span>
+                </div>
+              </div>
+              <div class="collapsible-body"><span> <span>Cделал web приложение, для выполнения этой задачи
+                    изучил:</span>
+                  <ul>
+                    <li>
+                      Handlebars
+                    </li>
+                    <li>
+                      MongoDB
+                    </li>
+                  </ul>
+                  <span>для авторизации пользователя использовал npm пакет:</span>
+                  <ul>
+                    <li>Express-session</li>
+                  </ul>
+                  <span>для избежания определённых атак и немного защитить приложение (путём добавления заголовков)
+                    использовал npm пакет:</span>
+                  <ul>
+                    <li>Helmet</li>
+                  </ul>
+                  <span>для валидации полей авторизации и регистрации пользователя использовал npm пакет:</span>
+                  <ul>
+                    <li>Express-validator</li>
+                  </ul>
+                  <span>для сжатия статических файлов использовал npm пакет:</span>
+                  <ul>
+                    <li>Сompression</li>
+                  </ul>
+                  <span>для отправки email использовал npm пакет:</span>
+                  <ul>
+                    <li>Nodemailer</li>
+                  </ul>
+                  <div>
+                    Вот ссылка на web приложение: &nbsp;&nbsp;<a
+                      href="https://quiet-gorge-08860.herokuapp.com">https://quiet-gorge-08860.herokuapp.com</a><br />
+                    Вот ссылка на GitHub: &nbsp;&nbsp;<a
+                      href="https://github.com/Victor-Irzunov/e-commerce-application.git">https://github.com/Victor-Irzunov/e-commerce-application.git</a><br />
+                    <i>Логин администратора: a@tut.by<br />
+                      Пароль администратора: 111</i><br />
+                    Срок выполнения: 1 месяц
+                  </div>
+                </span></div>
+            </li>
+
+            <li>
+              <div class="collapsible-header" onclick="toggleOpen(5)">
+                <div class="collapsible-header-img">
+                  <img src="images/REST-API-icon.png" class="img__api">
+                  <span class="collapsible__title">REST API</span>
+                </div>
+                <div class="arrow-4 i5">
+                  <span class="arrow-4-left"></span>
+                  <span class="arrow-4-right"></span>
+                </div>
+              </div>
+              <div class="collapsible-body"><span> <span>Создал простое, но полноценное клиент-серверное web приложение
+                    (todo application), для выполнения
+                    этой задачи изучил:</span>
+                  <ul>
+                    <li>
+                      MySQL
+                    </li>
+                    <div>
+                      Вот ссылка на web приложение: &nbsp;&nbsp;<a
+                        href="https://mighty-falls-71399.herokuapp.com/">https://mighty-falls-71399.herokuapp.com/</a><br />
+                      Вот ссылка на GitHub: &nbsp;&nbsp;<a
+                        href="https://github.com/Victor-Irzunov/REST-API.git">https://github.com/Victor-Irzunov/REST-API.git</a><br />
+                      Срок выполнения: 1 неделя
+                    </div>
+                  </ul>
+                </span></div>
+            </li>
+
+
+            <li>
+              <div class="collapsible-header" onclick="toggleOpen(6)">
+                <div class="collapsible-header-img">
+                  <img src="https://img.icons8.com/color/48/000000/graphql.png" class="img__graphql" />
+                  <span class="collapsible__title">GraphQL</span>
+                </div>
+                <div class="arrow-4 i6">
+                  <span class="arrow-4-left"></span>
+                  <span class="arrow-4-right"></span>
+                </div>
+              </div>
+              <div class="collapsible-body"><span>
+                  <div>
+                    Вот ссылка на GitHub: &nbsp;&nbsp;<a
+                      href="https://github.com/Victor-Irzunov/GraphQL.git">https://github.com/Victor-Irzunov/GraphQL.git</a><br />
+                    Срок выполнения: 3 дня
+                  </div>
+                </span></div>
             </li>
           </ul>
         </div>
       </div>
+
+
+
+
+
 
       <div class="skills">
         <div class="skill">
@@ -471,16 +544,20 @@
 
   <!-- Go Top BTN -->
   <button class="goTop fas fa-arrow-up"></button>
+
+
+
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', function () {
-      let elems = document.querySelectorAll('.carousel');
-      let instances = M.Carousel.init(elems, {
-        fullWidth: false,
-        shift: 120,
-        padding: 100
-      });
+      var elem = document.querySelectorAll('.collapsible')
+      var instances = M.Collapsible.init(elem)
     })
+
+    // $(".collapsible-header").click(function () {
+    //   $(this).toggleClass("open");
+    // });
   </script>
 </body>
 
