--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 
             <li>
-              <div class="collapsible-header"  onclick="toggleOpen(2)">
+              <div class="collapsible-header" onclick="toggleOpen(2)">
                 <div class="collapsible-header-img">
                   <img src="https://img.icons8.com/ios/50/000000/javascript--v1.png" class="img__js" />
                   <span class="collapsible__title">Javascript</span>
@@ -117,19 +117,10 @@
                   <span class="arrow-4-right"></span>
                 </div>
               </div>
-              <div class="collapsible-body"><span><span>Сделал адаптивное web приложение интернет магазина с:</span>
-                  <ul>
-                    <li>
-                      выбором языка
-                    </li>
-                    <li>
-                      админ панелью
-                    </li>
-                    <li>
-                      определением места положения
-                    </li>
-                  </ul>
-                  <span>для выполнения этой задачи изучил:</span>
+              <div class="collapsible-body"><span>Сделал адаптивное web приложение полноценного интернет
+                  магазина:</span>
+                <ul class="ul-li">
+                  <li><span>для выполнения этой задачи изучил:</span></li>
                   <ul>
                     <li>Node.js</li>
                     <li>Express</li>
@@ -137,40 +128,58 @@
                     <li>React Bootstrap</li>
                     <li>запуск приложения на сервере</li>
                   </ul>
-                  <span>для управления фронтенд-состоянием приложения использовал:</span>
+                  <li><span>для управления фронтенд-состоянием приложения использовал:</span></li>
                   <ul>
                     <li>MobX</li>
                   </ul>
-                  <span>для авторизации пользователя использовал:</span>
+                  <li><span>для авторизации пользователя использовал:</span></li>
                   <ul>
                     <li>JSON Web Token</li>
                   </ul>
-                  <span>для валидации полей авторизации и регистрации пользователя использовал npm пакет:</span>
+                  <li><span>для валидации полей авторизации и регистрации пользователя использовал npm пакет:</span>
+                  </li>
                   <ul>
                     <li>Express-validator</li>
                   </ul>
-                  <span>для добовления товара в список сравнения использовал:</span>
+                  <li><span>для добовления товара в список сравнения использовал:</span></li>
                   <ul>
                     <li>Cookie</li>
                   </ul>
-                  <span>для сжатия статических файлов использовал npm пакет:</span>
+                  <li><span>для сжатия статических файлов использовал npm пакет:</span></li>
                   <ul>
                     <li>Сompression</li>
                   </ul>
-                  <span>для отправки email использовал npm пакет:</span>
+                  <li><span>для отправки email использовал npm пакет:</span></li>
                   <ul>
                     <li>Nodemailer</li>
                   </ul>
-                  <div>
-                    Вот ссылка на web приложение: &nbsp;&nbsp;<a
-                      href="https://euro-app.site">https://euro-app.site</a><br />
-                    Вот ссылка на GitHub: &nbsp;&nbsp;<a
-                      href="https://github.com/Victor-Irzunov/E-comerce-React-Node.js-PostgreSQL-.git">https://github.com/Victor-Irzunov/E-comerce-React-Node.js-PostgreSQL-.git</a><br />
-                    <i>Логин администратора: q@tut.by<br />
-                      Пароль администратора: 11111</i><br />
-                    Срок выполнения: 3 месяца
-                  </div>
-                </span></div>
+                </ul>
+                <div class="collapsible-body-link">
+                  Вот ссылка на web приложение: &nbsp;&nbsp;<a
+                    href="https://euro-app.site">https://euro-app.site</a><br />
+                  Вот ссылка на GitHub: &nbsp;&nbsp;<a
+                    href="https://github.com/Victor-Irzunov/E-comerce-React-Node.js-PostgreSQL-.git">https://github.com/Victor-Irzunov/E-comerce-React-Node.js-PostgreSQL-.git</a><br />
+                  <i>Логин администратора: q@tut.by<br />
+                    Пароль администратора: 11111</i><br />
+                  Срок выполнения: 3 месяца
+                </div>
+
+                <span>Сделал адаптивное web приложение простую социальную сеть:</span>
+                <ul class="ul-li">
+                  <li>
+                    <span>для управления фронтенд-состоянием приложения использовал:</span>
+                    <ul>
+                      <li>Redux</li>
+                    </ul>
+                  </li>
+                </ul>
+
+                <div>
+                  Вот ссылка на GitHub: &nbsp;&nbsp;<a
+                    href="https://github.com/Victor-Irzunov/React_social.git">https://github.com/Victor-Irzunov/React_social.git</a><br />
+                  Срок выполнения: 2 недели
+                </div>
+
             </li>
 
 
@@ -185,8 +194,10 @@
                   <span class="arrow-4-right"></span>
                 </div>
               </div>
-              <div class="collapsible-body"><span> <span>Cделал web приложение, для выполнения этой задачи
-                    изучил:</span>
+              <div class="collapsible-body">
+                <span>Cделал web приложение, для выполнения этой задачи изучил:</span>
+                <ul class="ul-li">
+                  <li><span>для выполнения этой задачи изучил:</span></li>
                   <ul>
                     <li>
                       Handlebars
@@ -195,37 +206,39 @@
                       MongoDB
                     </li>
                   </ul>
-                  <span>для авторизации пользователя использовал npm пакет:</span>
+                  <li><span>для авторизации пользователя использовал npm пакет:</span></li>
                   <ul>
                     <li>Express-session</li>
                   </ul>
-                  <span>для избежания определённых атак и немного защитить приложение (путём добавления заголовков)
-                    использовал npm пакет:</span>
+                  <li><span>для избежания определённых атак и немного защитить приложение (путём добавления заголовков)
+                      использовал npm пакет:</span></li>
                   <ul>
                     <li>Helmet</li>
                   </ul>
-                  <span>для валидации полей авторизации и регистрации пользователя использовал npm пакет:</span>
+                  <li><span>для валидации полей авторизации и регистрации пользователя использовал npm пакет:</span>
+                  </li>
                   <ul>
                     <li>Express-validator</li>
                   </ul>
-                  <span>для сжатия статических файлов использовал npm пакет:</span>
+                  <li><span>для сжатия статических файлов использовал npm пакет:</span></li>
                   <ul>
                     <li>Сompression</li>
                   </ul>
-                  <span>для отправки email использовал npm пакет:</span>
+                  <li><span>для отправки email использовал npm пакет:</span></li>
                   <ul>
                     <li>Nodemailer</li>
                   </ul>
-                  <div>
-                    Вот ссылка на web приложение: &nbsp;&nbsp;<a
-                      href="https://quiet-gorge-08860.herokuapp.com">https://quiet-gorge-08860.herokuapp.com</a><br />
-                    Вот ссылка на GitHub: &nbsp;&nbsp;<a
-                      href="https://github.com/Victor-Irzunov/e-commerce-application.git">https://github.com/Victor-Irzunov/e-commerce-application.git</a><br />
-                    <i>Логин администратора: a@tut.by<br />
-                      Пароль администратора: 111</i><br />
-                    Срок выполнения: 1 месяц
-                  </div>
-                </span></div>
+                </ul>
+                <div>
+                  Вот ссылка на web приложение: &nbsp;&nbsp;<a
+                    href="https://quiet-gorge-08860.herokuapp.com">https://quiet-gorge-08860.herokuapp.com</a><br />
+                  Вот ссылка на GitHub: &nbsp;&nbsp;<a
+                    href="https://github.com/Victor-Irzunov/e-commerce-application.git">https://github.com/Victor-Irzunov/e-commerce-application.git</a><br />
+                  <i>Логин администратора: a@tut.by<br />
+                    Пароль администратора: 111</i><br />
+                  Срок выполнения: 1 месяц
+                </div>
+              </div>
             </li>
 
             <li>
@@ -351,38 +364,33 @@
       <h1 class="section-title">Services</h1>
       <div class="services">
         <div class="service">
-          <i class="icon fas fa-paint-brush"></i>
-          <h4>Design</h4>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-        </div>
-
-        <div class="service">
-          <i class="icon fas fa-pager"></i>
+          <i class="icon fa fa-window-maximize" aria-hidden="true"></i>
           <h4>Build Websites</h4>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
         </div>
-
+        <div class="service">
+          <i class="icon fas fa-pager"></i>
+          <h4>Build Webapp</h4>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+        </div>
         <div class="service">
           <i class="icon fas fa-database"></i>
           <h4>Manage Databases</h4>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
         </div>
-
         <div class="service">
-          <i class="icon fab fa-android"></i>
-          <h4>Android Apps</h4>
+          <i class="icon fa fa-desktop"></i>
+          <h4>Cross-browser compatibility</h4>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
         </div>
-
         <div class="service">
           <i class="icon fas fa-credit-card"></i>
           <h4>Ui Design</h4>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
         </div>
-
         <div class="service">
-          <i class="icon fas fa-keyboard"></i>
-          <h4>Edit Texts</h4>
+          <i class="icon fa fa-server" aria-hidden="true"></i>
+          <h4>Running the application on the server</h4>
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
         </div>
       </div>
@@ -395,45 +403,39 @@
       <h1 class="section-title">Education & Experiences</h1>
       <div class="time-line">
         <div class="block">
-          <h4>2018 - 2019</h4>
-          <h3>Software engineering</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At expedita maiores ullam voluptatum a nulla
-            aperiam enim eveniet adipisci ipsum.</p>
+          <h4>2020</h4>
+          <h3>HTML CSS</h3>
+          <p>обучение в IT-Academy</p>
         </div>
 
         <div class="block">
-          <h4>2018 - 2019</h4>
-          <h3>Software engineering</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At expedita maiores ullam voluptatum a nulla
-            aperiam enim eveniet adipisci ipsum.</p>
+          <h4>2020</h4>
+          <h3>JavaScript</h3>
+          <p>обучение в IT-Academy</p>
         </div>
 
         <div class="block">
-          <h4>2018 - 2019</h4>
-          <h3>Software engineering</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At expedita maiores ullam voluptatum a nulla
-            aperiam enim eveniet adipisci ipsum.</p>
+          <h4>2020 - 2021</h4>
+          <h3>React</h3>
+          <p>самообучение</p>
         </div>
 
         <div class="block">
-          <h4>2018 - 2019</h4>
-          <h3>Software engineering</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At expedita maiores ullam voluptatum a nulla
-            aperiam enim eveniet adipisci ipsum.</p>
+          <h4>2021</h4>
+          <h3>Node.js</h3>
+          <p>обучение в ОДО «Центр Обучающих Технологий»</p>
         </div>
 
         <div class="block">
-          <h4>2018 - 2019</h4>
-          <h3>Software engineering</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At expedita maiores ullam voluptatum a nulla
-            aperiam enim eveniet adipisci ipsum.</p>
+          <h4>2021</h4>
+          <h3>NoSQL</h3>
+          <p>самообучение</p>
         </div>
 
         <div class="block">
-          <h4>2018 - 2019</h4>
-          <h3>Software engineering</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At expedita maiores ullam voluptatum a nulla
-            aperiam enim eveniet adipisci ipsum.</p>
+          <h4>2021</h4>
+          <h3>SQL</h3>
+          <p>самообучение</p>
         </div>
       </div>
     </div>
