--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
         <img src="images/4.jpg" alt="" class="about-pic">
 
         <div class="about-text">
-          <h2>Hi! I'm Full Stack Developer</h2>
+          <h2>Hi! I'm Front-end Developer</h2>
           <h3>
             <span>Front-end</span>
-            <span>Back-end</span>
+            
           </h3>
           <p>Knowledge:</p>
           <ul class="collapsible popout">
@@ -86,7 +86,7 @@
                   <span class="arrow-4-right"></span>
                 </div>
               </div>
-              <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
+              <div class="collapsible-body"><span>animation, button, paralax, 3D, neon, card, smoke</span></div>
             </li>
 
 
@@ -118,7 +118,7 @@
                 </div>
               </div>
               <div class="collapsible-body"><span>Сделал адаптивное web приложение полноценного интернет
-                  магазина:</span>
+                  магазина (React, Node.js, PostgreSQL):</span>
                 <ul class="ul-li">
                   <li><span>для выполнения этой задачи изучил:</span></li>
                   <ul>
@@ -195,7 +195,7 @@
                 </div>
               </div>
               <div class="collapsible-body">
-                <span>Cделал web приложение, для выполнения этой задачи изучил:</span>
+                <span>Cделал web приложение на Node.js, для выполнения этой задачи изучил:</span>
                 <ul class="ul-li">
                   <li><span>для выполнения этой задачи изучил:</span></li>
                   <ul>
@@ -446,48 +446,48 @@
     <div class="inner-width">
       <h1 class="section-title">Works</h1>
       <div class="works">
-        <a href="images/works/1.jpg" class="work">
-          <img src="images/works/1.jpg" alt="">
+        <a href="images/works/scrin1.jpeg" class="work">
+          <img src="images/works/scrin1.jpeg" alt="">
+          <div class="info">
+            <h3>E-comerce</h3>
+            <div class="cat"></div>
+          </div>
+        </a>
+
+        <a href="images/works/scrin2.jpeg" class="work">
+          <img src="images/works/scrin2.jpeg" alt="">
           <div class="info">
             <h3>Work Title</h3>
             <div class="cat">Music, Headset</div>
           </div>
         </a>
 
-        <a href="images/works/2.jpg" class="work">
-          <img src="images/works/2.jpg" alt="">
+        <a href="images/works/scrin3.jpeg" class="work">
+          <img src="images/works/scrin3.jpeg" alt="">
           <div class="info">
             <h3>Work Title</h3>
             <div class="cat">Music, Headset</div>
           </div>
         </a>
 
-        <a href="images/works/3.jpg" class="work">
-          <img src="images/works/3.jpg" alt="">
+        <a href="images/works/scrin4.jpeg" class="work">
+          <img src="images/works/scrin4.jpeg" alt="">
           <div class="info">
             <h3>Work Title</h3>
             <div class="cat">Music, Headset</div>
           </div>
         </a>
 
-        <a href="images/works/4.jpg" class="work">
-          <img src="images/works/4.jpg" alt="">
+        <a href="images/works/scrin5.jpeg" class="work">
+          <img src="images/works/scrin5.jpeg" alt="">
           <div class="info">
             <h3>Work Title</h3>
             <div class="cat">Music, Headset</div>
           </div>
         </a>
 
-        <a href="images/works/5.jpg" class="work">
-          <img src="images/works/5.jpg" alt="">
-          <div class="info">
-            <h3>Work Title</h3>
-            <div class="cat">Music, Headset</div>
-          </div>
-        </a>
-
-        <a href="images/works/6.jpg" class="work">
-          <img src="images/works/6.jpg" alt="">
+        <a href="images/works/scrin6.jpeg" class="work">
+          <img src="images/works/scrin6.jpeg" alt="">
           <div class="info">
             <h3>Work Title</h3>
             <div class="cat">Music, Headset</div>
